# ITMO

SystemSoftware/: .gitignore  CMakeLists.txt
SystemSoftware/Chapter_01/: Task_01_2.cpp  Task_01_4.cpp
SystemSoftware/Chapter_03/: Task_3_02.cpp  Task_3_04.cpp  Task_3_08.cpp  Task_3_14.cpp
SystemSoftware/Chapter_04/: Task_4_2.cpp  Task_4_4.cpp
SystemSoftware/Chapter_05/: Task_5_04.cpp  Task_5_10.cpp  Task_5_6.cpp
SystemSoftware/Chapter_06/: Task_6_02.cpp  Task_6_08.cpp  Task_6_10.cpp  Task_6_6.cpp
SystemSoftware/Chapter_07/: Task_7_2.cpp  Task_7_4.cpp
SystemSoftware/Chapter_09/: Task_9_06.cpp  Task_9_08.cpp  Task_9_10.cpp  Task_9_2.cpp
SystemSoftware/Chapter_11/: Task_11_04.cpp  Task_11_06.cpp  Task_11_08.cpp  Task_11_2.cpp
SystemSoftware/Chapter_12/: Task_12_2.cpp
SystemSoftware/Chapter_13/: Task_13_2.cpp  Task_13_4.cpp  Task_13_6.cpp
SystemSoftware/Chapter_14/: Task_14_04.cpp  Task_14_06.cpp  Task_14_08.cpp  Task_14_10.cpp  Task_14_12.cpp  Task_14_2.cpp
SystemSoftware/Chapter_15/: Task_15_2.cpp  Task_15_4.cpp  Task_15_6.cpp
SystemSoftware/Chapter_18/: Task_18_2.cpp  Task_18_4.cpp  Task_18_6.cpp
SystemSoftware/Chapter_20/: Task_20_2.cpp  Task_20_4.cpp  Task_20_6.cpp  Task_20_8.cpp
SystemSoftware/Chapter_22/: Task_22_2.cpp  Task_22_4.cpp
SystemSoftware/Chapter_23/: Task_23_2.cpp  Task_23_2.in  Task_23_4.cpp  Task_23_4.in  Task_23_6.cpp  Task_23_6.file  Task_23_8.cpp  Task_23_8.file
SystemSoftware/Chapter_24/: Task_24_02.cpp  Task_24_04.cpp  Task_24_06.cpp  Task_24_08.cpp  Task_24_10.cpp
SystemSoftware/Chapter_25/: Task_25_2.cpp
(+18 files in other folders)
